--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script>
+      if (
+        !sessionStorage.getItem('_swa') &&
+        document.referrer.indexOf(location.protocol + '//' + location.host) !==
+          0
+      ) {
+        fetch(
+          'https://counter.dev/track?' +
+            new URLSearchParams({
+              referrer: document.referrer,
+              screen: screen.width + 'x' + screen.height,
+              user: 'kiyoshi33@gmail.com',
+              utcoffset: '-3'
+            })
+        );
+      }
+      sessionStorage.setItem('_swa', '1');
+    </script>
     <title>Adivinhe o Número</title>
   </head>
   <body>
